force-app/main/default/objects/OHS_Compliance_Item__c/OHS_Compliance_Item__c.object-meta.xml
<CustomObject>
    <description>Tracks OHS regulatory and contractual compliance requirements per project, with evidence and gap status.</description>
    <label>OHS Compliance Item</label>
    <nameField>
        <displayFormat>OHS-{00000}</displayFormat>
        <label>Compliance Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OHS Compliance Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>