force-app/main/default/objects/OHS_Compliance_Item__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>OHS Compliance Items</relationshipLabel>
    <relationshipName>OHS_Compliance_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>