force-app/main/default/objects/OHS_Compliance_Item__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <label>Requirement</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>